# fedmaq-literature

./: .env.copy  .gitignore  .markdownlintignore  AGENTS.md  CLAUDE.md  README.md  fedmaq-grilling-plan.md  pyproject.toml
.claude/project/: changelog.md  paper_registry.md
.claude/rules/: agent-memory.md  kg-conventions.md  naming-conventions.md  no-pdf-read.md  okf-concept-template.md  okf-finding-template.md  okf-method-template.md  okf-paper-template.md  repo-preferences.md  thesis-context.md
.cursor/project/: paper_registry.md
.cursor/rules/: kg-conventions.mdc  naming-conventions.mdc  no-pdf-read.mdc  rag-boundaries.mdc  repo-preferences.mdc  summary-template.mdc  synthesis-template.mdc
kg/: index.md  log.md
kg/concepts/: adaptive-bit-width.md  communication-efficiency.md  data-free-distillation.md  edge-iot-deployment.md  index.md  knowledge-distillation.md  model-compression.md  non-iid-heterogeneity.md  privacy-in-fl.md  proxy-dataset-distillation.md  quantization.md
kg/findings/: adaptive-quantization-beats-uniform.md  application-fl-validation.md  comm-efficiency-tradeoff.md  data-free-kd-removes-proxy-cost.md  distillation-cuts-uplink-needs-proxy.md  drift-correction-tradeoff.md  index.md  no-unified-compression-heterogeneity-method.md  quantization-kd-complementary.md
kg/gaps/: adaptive-precision-scheduling.md  application-eval-gaps.md  heterogeneity-aware-quantization.md  index.md  multi-adaptive-q-kd-scarcity.md  proxy-data-dependence.md  quantization-drift-interaction.md
kg/methods/: adadq-kd.md  adagq.md  cfd.md  dadaquant.md  dynfed.md  fd-faug.md  fedavg.md  feddf.md  feddistill-debias.md  feddistill.md  feddt.md  feddyn.md  fedgems.md  fedgen.md  fedkd.md  fedmaq.md  fedmd.md  fednova.md  fedpaq.md  (+9 more)
scripts/: build_kg_papers.py
summaries/: cajas-ordonez-2025-edge-computing-survey.md  hinton-2015-distillation.md  honig-2022-dadaquant.md  jimenez-2024-non-iid-survey.md  li-2019-fedmd.md  mcmahan-2017-fedavg.md  reisizadeh-2020-fedpaq.md  sattler-2022-cfd.md  sravanthi-2025-energy-management.md  thangakrishnan-2025-spatiotemporal-fl.md  wang-2026-adadq-kd.md  wu-2022-fedkd.md
tests/: __init__.py  test_ingest.py  test_pipeline.py  test_qa.py  test_registry.py  test_workflows.py
(+182 files in other folders)
