[project]
name = "fedmaq-literature"
version = "0.1.0"
description = "FedMAQ literature RAG pipeline (PDF conversion, indexing, summaries)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=0.5.0",
    "llama-index-core>=0.12.0",
    "llama-index-embeddings-huggingface>=0.4.0",
    "llama-index-vector-stores-chroma>=0.4.0",
    "openai>=1.0.0",
    "pyyaml>=6.0",
    "torch==2.12.1+cu132",
    "torchvision==0.27.1+cu132",
]

[project.optional-dependencies]
convert = [
    "docling>=2.0.0",
]
marker = [
    "marker-pdf>=1.0.0",
]
dev = ["pytest>=8.0.0", "ruff>=0.8.0"]

[project.scripts]
fedmaq-lit = "fedmaq_literature.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fedmaq_literature"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[[tool.uv.index]]
name = "pytorch-cu132"
url = "https://download.pytorch.org/whl/cu132"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu132" }
torchvision = { index = "pytorch-cu132" }
